fix a bug causing the header to jump around

--- a/juniorguru/web/static/src/css/components/header.scss
+++ b/juniorguru/web/static/src/css/components/header.scss
@@ -14,20 +14,29 @@ $logo-height-index: 10rem;
 }
 
 .header__navbar {
-  display: block;
+  box-sizing: border-box;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-top: 0;
 }
 
 .header--subnav .header__navbar {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
+.header--optional {
+  overflow-y: hidden;
+}
+
 .header--optional .header__navbar {
-  display: none;
+  margin-top: -1 * $logo-height;
 }
 
 .header--index {
   position: static;
+}
+
+.header--index .header__navbar {
+  margin-top: 0;
 }
 
 :target::before {
@@ -264,7 +273,7 @@ a.header__subnav-tab-control:active {
 
 @media screen and (min-width: 550px) {
   .header--optional .header__navbar {
-    display: block;
+    margin-top: 0;
   }
 
   .header--index .header__main-content {
